Update lyrics in flower.html

--- a/flower.html
+++ b/flower.html
@@ -13,9 +13,8 @@
     <div id="lyrics">
      
     </div>
-    <h1 class="titulo">Si llegas a volver a ver esto mandame un besito en mensaje corre </h1>
-    <br><br><br>
-        <h1 class="titulo">DISCULPAME </h1>
+    <h1 class="titulo">Si llegas a volver a ver esto mandame un besito en mensaje corre extraño uno de esos</h1>
+  
   
     <div class="night"></div>
     <div class="flowers">
